--- a/CICLO 2 -  JAVA/NetBeansProjects/ProyectoFinal/src/main/java/GUI/FrmRegistrarPartido.form
+++ b/CICLO 2 -  JAVA/NetBeansProjects/ProyectoFinal/src/main/java/GUI/FrmRegistrarPartido.form
@@ -25,7 +25,7 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="jPanel1" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
           </Group>
@@ -58,7 +58,7 @@
                   </Group>
                   <EmptySpace min="-2" pref="51" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="btnRegistrarPartido" pref="241" max="32767" attributes="0"/>
+                      <Component id="btnRegistrarPartido" pref="227" max="32767" attributes="0"/>
                       <Component id="txtGolesLocal" max="32767" attributes="0"/>
                       <Component id="txtGolesVisitante" max="32767" attributes="0"/>
                       <Component id="txtFechaPartido" max="32767" attributes="0"/>
@@ -101,7 +101,7 @@
                   </Group>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="btnRegistrarPartido" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="21" max="32767" attributes="0"/>
+                  <EmptySpace pref="14" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
